fixing spacing issues and button styling

--- a/static/styles/question-example.css
+++ b/static/styles/question-example.css
@@ -2,9 +2,10 @@ main
 {
     float: left;
 }
+
 .container
 {
-    width: 747px;
+    width: 500px;
     background-color: #F8F9FA;
     border: 2px solid #7749F8;
     position: relative;
@@ -17,7 +18,7 @@ main
     margin-left: 0px;
 }
 
-#main-reply
+button
 {
-    min-height: 120px;
+    margin-top: 2px;
 }
